--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,12 +1,12 @@
 
 @font-face {
     font-family: 'yea'; /*a name to be used later*/
-    src: url(jenkins.TTF); /*URL to font*/
+    src: url(main/jenkins.TTF); /*URL to font*/
 }
 
 @font-face {
     font-family: 'main'; /*a name to be used later*/
-    src: url(jbmsb.ttf); /*URL to font*/
+    src: url(main/jbmsb.ttf); /*URL to font*/
 }
 
 
